--- a/css/styles.css
+++ b/css/styles.css
@@ -1,6 +1,9 @@
 body {
     background-color: #001B63;
     font-family: 'Noto Sans JP', sans-serif;
+    margin: 0;
+    padding: 0;
+    box-sizing: 0;
 }
 
 /* Contenedor principal 3 columnas x 4 lineas */
@@ -24,7 +27,7 @@ body {
 
 .me-container .me-header {
     position:absolute;
-    right:20%;
+    right:13%;
     background-color: transparent hsl(196, 100%, 30%);
     grid-area: header;
     padding: 5px 20px;
@@ -33,6 +36,7 @@ body {
 .me-container .me-main {
     grid-area:main;
     margin: 0px;
+    border:0;
 }
 .me-container .me-sidebar {
     display: flex;
@@ -51,9 +55,10 @@ body {
 }
 
 .me-container .me-footer {
-    background-color:#B389E0;
+    background-color:#BAE6FF;
     grid-area:footer;
     padding: 10px 20px;
+    height: auto;
 }
 
 .me-sidebar img {
@@ -61,19 +66,33 @@ body {
     height:35px;
 }
 
-.me-logo {
+.me-logo-img {
     position:absolute;
     margin: 10px;
     width: 100px;
     height: 70px;
 }
  
+/*.video-container {
+    position: relative;
+    padding-bottom:70%;
+    padding-top:0px;
+    height: 0;
+    overflow: hidden;
+}*/
 .video-portada {
+    /*position:absolute;*/
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%; 
+}
+/*.video-portada {
     opacity: 1; 
     width: 100%;
     height: auto; 
     margin:0px;
-}
+}*/
 ul > li {
    display: inline-block;
    list-style-type: none; 
@@ -92,11 +111,22 @@ ul > li {
     color:yellow;
     font-weight: bold;
 }
+.me-footer .declaration,
+.me-footer .copyright {
+    font-size: 0.8em;
 
-.copyright {
+}
+.me-footer .declaration p{
+    line-height: 1.1em;
+}
+.me-footer .copyright {
+    text-align: right;
+}
+
+/*.copyright {
     text-align: right;
     font-size: 0.8em;
-}
+}*/
 
 #side-item-element-1 {
     width: 100%;
@@ -222,6 +252,9 @@ iframe {
     .me-container .me-header {
         position:relative;
         right: auto;
+    }
+    .me-menu {
+        padding:0px;
     }
     .me-menu a {
         font-size: 15px;
