--- a/css/styles.css
+++ b/css/styles.css
@@ -30,16 +30,12 @@ body {
     grid-area: header;
     padding: 0px auto;
 }
-.me-mapa-title {
-    color:white;
-    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-    font-weight: bold;
-    font-size: 12;
-}
 .me-container .me-main {
     grid-area:main;
     margin: 0px;
     border:0;
+    width:auto;
+    height:auto;
 }
 .me-container .me-sidebar {
     display: flex;
@@ -64,7 +60,7 @@ body {
     padding: 10px 20px;
     height: auto;
 }
-
+/* LOGO */
 .me-logo-img {
     position:absolute;
     margin: 10px;
@@ -72,6 +68,7 @@ body {
     height: 70px;
 }
  
+/* VIDEO */
 .video-container {
     overflow: hidden;
 }
@@ -81,7 +78,9 @@ body {
     width: 100%;
     height: 100%; 
 }
-ul > li {
+
+/* MENU */
+.me-menu > li {
    display: inline-block;
    list-style-type: none; 
    text-justify:auto;
@@ -99,9 +98,8 @@ ul > li {
     color:yellow;
     font-weight: bold;
 }
-.me-animacion-container {
-    width:100%;
-}
+
+/* FOOTER*/
 
 .me-footer .declaration,
 .me-footer .copyright {
@@ -114,27 +112,47 @@ ul > li {
 .me-footer .copyright {
     text-align: right;
 }
+/* ARTICULOS */
 
-#side-item-element {
-    width: 100%;
-    height: 100%;
-    background: url("../img/me_elements_color.svg") no-repeat 0 0;
-    background-size: 50%;
-    background-position: center;
-    animation: me_elements 10s linear infinite;
+.me-article-conteiner {
+    background-color: #001B63;
 }
+.me-article {
+    background-color:#9FD4E0;
+    margin: auto;
+    border-radius: 5px;
+    width: 85%;    
+    padding: 20px;
+}
+ 
+.me-article > ul {
+    font-family: Arial, Helvetica, sans-serif;
+    line-height: 1.5em;
+}
+.me-article > h1 {
+    font-weight: bold;
+    font-size: 2em
+}
+
+.me-article p {
+    font-size: 0.9em;
+}
+
+.me-portrait-logo {
+    width: 50%;
+}
+.me-arma-descr {
+    float: left;
+    margin-right: 20px;
+    margin-bottom: 20px;
+}
+
+/* FORMULARIO */
 
 .me-formulario {
     background-color:#2A383B;
     padding: 25px;
     margin-top:10px;
-}
-.me-article {
-    background-color:#9FD4E0;
-    margin-top: 10px;
-
-    padding: 60px;
-    border-radius: 5px;
 }
 .label-title {
     color:white;
@@ -153,6 +171,18 @@ ul > li {
     font-weight: bold;
 }
 /* animacion dea elementos coloreandose en la pagina "mapa.html" */
+.me-animacion-container {
+    width:100%;
+}
+
+#side-item-element {
+    width: 100%;
+    height: 100%;
+    background: url("../img/me_elements_color.svg") no-repeat 0 0;
+    background-size: 50%;
+    background-position: center;
+    animation: me_elements 10s linear infinite;
+}
 
 @keyframes me_elements {
     0% {
@@ -197,14 +227,41 @@ ul > li {
     }
 }
 
+/* MAPA */
+.me-mapa {
+  position: absolute;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
+  width: 100%;
+  height: 100%;
+}
+
+.me-mapa-title {
+    color:white;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    font-weight: bold;
+    font-size: 12;
+}
 
 .me-main-map {
     width:100%;
     height:100%;
 }
+
+/* iframe */
 iframe {
      width:"900px";
      height:"600px";
+}
+
+.me-iframe {
+  width: 1000px;
+  height:auto;
+  padding-top: 56.25%;
+  position: relative;
+  overflow: hidden;
 }
 
 /* REDES SOCIALES */
@@ -231,27 +288,6 @@ iframe {
 .fab:first-child:hover {
     padding: 0 0 0 10px;
 }
-
-/* iframe */
-.me-iframe {
-  width: 1000px;
-  height:auto;
-  padding-top: 56.25%;
-  position: relative;
-  overflow: hidden;
-}
-
-/* Then style the iframe to fit in the container div with full height and width */
-.me-mapa {
-  position: absolute;
-  top: 0;
-  left: 0;
-  bottom: 0;
-  right: 0;
-  width: 100%;
-  height: 100%;
-}
-
 
 /* Media Querys*/
 
@@ -296,5 +332,11 @@ iframe {
         width:auto;
         min-width:380px;
         height: 100%;
+    }
+    .me-article {
+        width:75%;
+    }
+    .me-arma-descr {
+        width:100%;
     }
 }
